<resources>
    <string name="app_name">NIHAN</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">Helpful tips coming soon!</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Praesent ultrices congue rutrum.
        Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
        eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
        blandit, dolor diam fringilla tellus, eu euismod mauris neque
        at neque.</string>
    <string name="walking1">Walking Info!!!</string>
    <string-array name="tips_titles">
        <item>Walking Tips for Older Adults</item>
        <item>Choosing the Right Cane or Walker</item>
        <item>Safe Travel Tips for Older Adults</item>
        <item>Safe Sex for Older Adults</item>
        <item>Tips for Living with Diabetes</item>
        <item>Tips for Avoiding Caregiver Burnout</item>
    </string-array>
    <string-array name="tips_info">
        <item>Here is some walking tips!</item>
        <item>Here is some information about choosing the right cane or walker!</item>
        <item>Here is some travel tips!</item>
        <item>Here is some tips for safe sex!</item>
        <item>Here is some tips for living with diabetes!</item>
        <item>Here is some tips for avoiding caregiver burnout!</item>
    </string-array>
    <string name="walk_header2_1">
        Walking is the most popular form of exercise among older adults and it’s a great choice.
    </string>
    <string name="walk_text1">
        If it’s been a long time since you exercised, you may want to start out slowly. You can start with
        just 5 minutes and build up to the recommended 30 minutes a day. Your goal should be to get up to
        taking 100 steps a minute. Remember, the most important thing is to just get started.
    </string>
    <string name="walk_header3_1">What can walking do for you? </string>
    <string name="walk_list1">
        <li>strengthen muscles</li>\n
        <li>help prevent weight gain</li>\n
        <li>lower risks of heart disease, stroke, diabetes, and osteoporosis</li>\n
        <li>improve balance</li>\n
        <li>lower the likelihood of falling</li>
    </string>
    <string name="walk_header1_1">Take These Steps to Get Walking</string>
    <string name="walk_header2_2">Join a walking program or walk with a buddy</string>
    <string name="walk_text2">
        Chances are you’ll stick with a walking program if you have someone to walk with. Some shopping malls or town parks may
        have these programs. The National Institute on Aging’s Go4Life campaign has many resources for walking and other kinds of physical
        activity (https://go4life.nia.nih.gov/).
    </string>
    <string name="walk_header2_3">Wear the right shoes</string>
    <string name="safesex_text">
        Many older adults are remaining or becoming sexually active. This is because of better health among older adults, longer lifespans, more open attitudes 
        toward sexuality, internet dating, and the availability of medications like Viagra and estrogen products. Sex can still be satisfying but will be different 
        from younger years, and might need to be adapted for current age, disability, illness, or surgery-induced body changes. Older adults are more vulnerable to 
        sexually transmitted infections (STIs) than younger adults. Everyone should use safe sex practices.
    </string>
    <string name="safesex_header3">Here are 4 tips on having and enjoying safe sex, no matter what your age.</string>
    <string name="safesex_header2_1">Do a background and body check</string>
    <string name="safesex_header2_2">Consider getting tested first</string>
    <string name="safesex_header2_3">Use a condom and lubricant</string>
    <string name="safesex_header2_4">Talk to your healthcare provider</string>
    <string name="safesex_text1">
        Know your partner’s sexual background before having oral, vaginal, or anal sex. All types of sex can spread STIs. Talk about your sexual histories, any past STIs,
        results of STI testing, and whether either of you has ever injected illegal drugs. (Besides sex, HIV/AIDS can also be acquired by sharing syringe needles.)
        Before having sex, check your partner’s penis or vaginal area for sores, abnormal discharges, or odors.
    </string>
    <string name="safesex_text2">
        The best way to protect yourself and your partner is for the two of you to get tested for HIV and other STIs before you start having sex. A person can have an
        STI and not know it because the symptoms are not obvious. And some symptoms of STIs or HIV, such as tiredness, can be mistaken for age-related health problems.
    </string>
    <string name="safesex_text3">
        Use one condom and lubricant every time you have vaginal, oral, or anal sex, including during foreplay, until you know your partner’s sexual history,
        STI status, and are in a sexually exclusive relationship. Using water-based lubricants such as K-Y Jelly and Astroglide is important because they can
        lower the chances of getting a sore or tiny cut on the penis or inside the vagina. These sores and cuts can increase the risk of getting STIs. Do not
        use Vaseline or mineral oil with condoms because it destroys the condom lining. Put the condom on after the penis is erect, leaving a 1/2 inch space
        at the tip. Hold the condom at the base (open end) as you remove it. Do not use the same condom twice. Do not use expired condoms.
    </string>
    <string name="safesex_text4">
        Your healthcare provider can offer additional advice about protecting yourself from STIs and when sex is safe with certain medical conditions such as after
        a heart attack. Your provider can also recommend treatments for common sexual problems such as vaginal dryness and erectile dysfunction (difficulty getting
        an erection, also known as ED). They can also recommend treatments for conditions that can affect your sex life, such as incontinence. \n\n
        Effective treatments for vaginal dryness include over-the-counter moisturizers, lubricants, and prescription estrogen creams, tablets, and rings that you
        insert vaginally. \n\n
        ED increases with age, but it is not always a part of growing older. ED can be due to medical conditions such as heart disease or diabetes or emotional problems
        such as depression, anxiety, and stress. It can also be due to side effects from medications such as antidepressants or high blood pressure drugs, as well as
        alcohol use. \n\n
        Because ED may be the first sign of an underlying medical condition, talk to your healthcare provider if you experience this problem. Medications exist to help
        resolve ED problems. Before using ED medications and over the counter and herbal sex aids, make sure to discuss them with your provider or pharmacist.
    </string>
    <string name="diabetes_header3">Diabetes is a common health problem among older people. More than 40 percent of Americans with diabetes are 65 or older.</string>
    <string name="diabetes_text1">When your body digests food it converts much of it into glucose—a kind of sugar that your cells use for energy.
        Your body also produces a hormone called insulin. Insulin helps you get the right amount of glucose in your bloodstream, which carries it to your cells. 
        When something goes wrong with these processes, the result is diabetes.</string>
    <string name="diabetes_text2">
        <b>What is diabetes?</b> Diabetes develops when the amount of sugar in your blood becomes too high, either because your body doesn’t make enough insulin
        (type 1 diabetes), because your body doesn’t respond to insulin (type 2 diabetes), or both. The extra sugar in your blood can damage parts of your body,
        such as your eyes or kidneys. People with type 1 usually develop diabetes in childhood or as teenagers. Older people are particularly likely to develop
        type 2 diabetes because your body’s ability to manage sugar declines with age. Being overweight can also cause diabetes.</string>
    <string name="diabetes_text3">
        <b>Diabetes can’t be cured but it can be managed.</b> If you have diabetes, you should work closely with your healthcare providers to keep your blood pressure,
        cholesterol, and sugar levels under control.
    </string>
    <string name="diabetes_text4">Here’s some expert advice, from the Health in Aging Foundation, for older adults with diabetes and their caregivers.</string>
    <string name="diabetes_header2_1">Make a plan</string>
    <string name="diabetes_header2_2">Make the most of free Medicare services</string>
    <string name="diabetes_header2_3">Eat smaller portions</string>
    <string name="diabetes_header2_4">Choose whole grain breads, cereals, and pasta</string>
    <string name="diabetes_header2_5">Eat a wide variety of low- calorie produce</string>
    <string name="diabetes_header2_6">Avoid sugary drinks and foods</string>
    <string name="diabetes_header2_7">Get moving</string>
    <string name="diabetes_header2_8">Slim down</string>
    <string name="diabetes_h2text_1">
        <b>Work with your healthcare providers to develop a diabetes treatment plan.</b> For many patients, the diabetes educator is an important member of your
        team who can teach you about the best way to eat and stay active. Medicare will cover a visit to a diabetes educator if you and your healthcare provider
        think that you need this. Your treatment plan should meet your needs <i>and your wishes</i>.
    </string>
    <string name="diabetes_h2text_2">
        <b>If you need more help learning how to keep your diabetes under control</b>, Medicare will cover a visit with a diabetes educator once a year.
        Ask your healthcare provider to give you a referral.
    </string>
    <string name="diabetes_h2text_3"><b>Eating more small meals</b> over the course of the day can help keep your blood sugar levels steadier than eating three large meals.</string>
    <string name="diabetes_h2text_4">
        <b>Whole grains have more fiber, and take longer to digest</b> than white flour and other refined starches. Whole grains, such as whole wheat flour, brown rice,
        oats and barley, can help keep your blood sugar levels steadier.
    </string>
    <string name="diabetes_h2text_5">
        Choose bright or deep-colored fruits and vegetables such as spinach, green or red lettuce, tomatoes, carrots, broccoli, squash, or sweet potatoes. \n
        These foods are better choices than white potatoes or iceberg lettuce.
    </string>
    <string name="diabetes_h2text_6">
        <b>Drink water or unsweetened tea instead of soft drinks</b> or other beverages high in natural or added sugar. \n
        Enjoy fresh fruits for dessert. \n
        Avoid processed and prepared foods. These often contain corn syrup, and are high in fat and salt.
    </string>
    <string name="diabetes_h2text_7">
        <b>Even small increases in physical activity can help</b> you control your blood sugar and blood pressure levels, and can help preserve your ability to
        live independently. \n
        Talk to your healthcare provider about how to get started if you haven’t been exercising for a while. If your healthcare provider says it is safe,
        start with at least 20 minutes of exercise at least three times a week. If you exercise more often, you’ll see even greater benefits.
    </string>
    <string name="diabetes_h2text_8">
        <b>If you are overweight, losing even 5 to 10 pounds</b> can help make your diabetes easier to treat. You can do this by both eating well and exercising regularly.
    </string>
</resources>